nivasa-macros/tests/trybuild/module_guard_empty.rs
use nivasa_macros::{guard, module};

#[module({})]
#[guard()]
struct AppModule;

fn main() {}
